--- a/seed-web/src/main/resources/application.properties
+++ b/seed-web/src/main/resources/application.properties
@@ -6,3 +6,4 @@ pagehelper.helper-dialect=mysql
 pagehelper.params=count=countSql
 pagehelper.reasonable=true
 pagehelper.support-methods-arguments=true
+spring.jpa.open-in-view=false
