--- a/seed-web/src/main/resources/application-prd.properties
+++ b/seed-web/src/main/resources/application-prd.properties
@@ -1,6 +1,6 @@
 logging.config=classpath:log4j/log4j2-prd.xml
 #dc库
-spring.datasource.dc.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.dc.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.dc.jdbc-url=jdbc:mysql://127.0.0.1:3306/web?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&zeroDateTimeBehavior=convertToNull&serverTimezone=GMT%2B8  
 spring.datasource.dc.username=123
 spring.datasource.dc.password=123
