Disable log aspect

--- a/seed-web/src/main/resources/application.properties
+++ b/seed-web/src/main/resources/application.properties
@@ -6,4 +6,12 @@ pagehelper.helper-dialect=mysql
 pagehelper.params=count=countSql
 pagehelper.reasonable=true
 pagehelper.support-methods-arguments=true
+# spring mybatis
+spring.mybatis.mapper-locations=classpath*:/mapper/*.xml
+# spring jpa
 spring.jpa.open-in-view=false
+spring.jpa.databasePlatform=org.hibernate.dialect.MySQLDialect
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
