Update websocket chat demo

--- a/seed-web/src/main/resources/application.properties
+++ b/seed-web/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 spring.profiles.active=dev
 server.port=9090
 #server.servlet.context-path=/api
+# freemarker
+spring.freemarker.templateLoaderPath=classpath:/templates/
+spring.freemarker.suffix=.ftl
+spring.freemarker.charset=UTF-8
+spring.freemarker.request-context-attribute=request
+spring.freemarker.settings.number_format=0.##########
 #pageHelper
 pagehelper.helper-dialect=mysql
 pagehelper.params=count=countSql
