--- a/seed-web/pom.xml
+++ b/seed-web/pom.xml
@@ -17,6 +17,13 @@
             <artifactId>seed-common</artifactId>
             <version>1.0.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.luxx</groupId>
+            <artifactId>seed-client</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
