--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,13 @@
                 <version>${lombok.version}</version>
             </dependency>
 
+            <!-- java-jwt -->
+            <dependency>
+                <groupId>com.auth0</groupId>
+                <artifactId>java-jwt</artifactId>
+                <version>3.10.3</version>
+            </dependency>
+
             <!-- okhttp -->
             <dependency>
                 <groupId>com.squareup.okhttp3</groupId>
