--- a/seed-common/pom.xml
+++ b/seed-common/pom.xml
@@ -13,6 +13,13 @@
     <packaging>jar</packaging>
 
     <dependencies>
+        <!-- test -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
