--- a/pom.xml
+++ b/pom.xml
@@ -166,7 +166,7 @@
                 <artifactId>okio</artifactId>
                 <version>2.6.0</version>
             </dependency>
-            
+
             <!-- xxl-job -->
             <dependency>
                 <groupId>com.xuxueli</groupId>
@@ -232,6 +232,13 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
                 <version>3.11</version>
+            </dependency>
+
+            <!-- commons-io -->
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>2.8.0</version>
             </dependency>
 
             <dependency>
