--- a/seed-web/src/main/resources/application.properties
+++ b/seed-web/src/main/resources/application.properties
@@ -13,6 +13,8 @@ pagehelper.params=count=countSql
 pagehelper.reasonable=true
 pagehelper.support-methods-arguments=true
 # spring mybatis
+mybatis.type-aliases-package=com.luxx.seed.model
+mybatis.configuration.map-underscore-to-camel-case=true
 spring.mybatis.mapper-locations=classpath*:/mapper/*.xml
 # spring jpa
 spring.jpa.open-in-view=false
