--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,18 @@
                 <version>2.1.0</version>
             </dependency>
 
+            <!-- shedlock分布式锁 -->
+            <dependency>
+                <groupId>net.javacrumbs.shedlock</groupId>
+                <artifactId>shedlock-spring</artifactId>
+                <version>4.20.0</version>
+            </dependency>
+            <dependency>
+                <groupId>net.javacrumbs.shedlock</groupId>
+                <artifactId>shedlock-provider-jdbc-template</artifactId>
+                <version>4.20.0</version>
+            </dependency>
+
             <!-- elasticsearch -->
             <dependency>
                 <groupId>org.elasticsearch</groupId>
