--- a/seed-task/src/main/resources/application-prd.properties
+++ b/seed-task/src/main/resources/application-prd.properties
@@ -7,3 +7,9 @@ spring.schedule.job.executor.ip=
 spring.schedule.job.accessToken=
 spring.schedule.job.executor.logpath=/home/appadmin/app-task/log/jobhandler
 spring.schedule.job.executor.logretentiondays=3
+# spring datasource
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/web?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&zeroDateTimeBehavior=convertToNull&serverTimezone=GMT%2B8
+spring.datasource.username=123
+spring.datasource.password=123
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
