Update web project

--- a/seed-web/src/main/resources/application.properties
+++ b/seed-web/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.freemarker.suffix=.ftl
 spring.freemarker.charset=UTF-8
 spring.freemarker.request-context-attribute=request
 spring.freemarker.settings.number_format=0.##########
-#pageHelper
+# mybatis pageHelper
 pagehelper.helper-dialect=mysql
 pagehelper.params=count=countSql
 pagehelper.reasonable=true
@@ -16,10 +16,3 @@ pagehelper.support-methods-arguments=true
 mybatis.type-aliases-package=com.luxx.seed.model
 mybatis.configuration.map-underscore-to-camel-case=true
 spring.mybatis.mapper-locations=classpath*:/mapper/*.xml
-# spring jpa
-spring.jpa.open-in-view=false
-spring.jpa.databasePlatform=org.hibernate.dialect.MySQLDialect
-#spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
