--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <guava.version>30.1-jre</guava.version>
         <jedis.version>3.2.0</jedis.version>
         <junit.version>4.13.1</junit.version>
+        <aspectj.version>1.9.6</aspectj.version>
     </properties>
 
     <dependencyManagement>
@@ -74,17 +75,6 @@
                 <artifactId>spring-boot-starter-test</artifactId>
                 <version>${spring-boot.version}</version>
                 <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-openfeign</artifactId>
-                <version>2.2.2.RELEASE</version>
-            </dependency>
-            <!-- springboot jpa -->
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-data-jpa</artifactId>
-                <version>${spring-boot.version}</version>
             </dependency>
             <!-- springboot mybatis -->
             <dependency>
@@ -257,6 +247,17 @@
                 <groupId>cn.hutool</groupId>
                 <artifactId>hutool-all</artifactId>
                 <version>5.4.6</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.aspectj</groupId>
+                <artifactId>aspectjtools</artifactId>
+                <version>${aspectj.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.aspectj</groupId>
+                <artifactId>aspectjweaver</artifactId>
+                <version>${aspectj.version}</version>
             </dependency>
 
         </dependencies>
