Update web service

--- a/seed-web/src/main/resources/application.properties
+++ b/seed-web/src/main/resources/application.properties
@@ -15,4 +15,4 @@ pagehelper.support-methods-arguments=true
 # spring mybatis
 mybatis.type-aliases-package=com.luxx.seed.model
 mybatis.configuration.map-underscore-to-camel-case=true
-spring.mybatis.mapper-locations=classpath*:/mapper/*.xml
+mybatis.mapper-locations=classpath:/mapper/*.xml
