--- a/pom.xml
+++ b/pom.xml
@@ -23,19 +23,24 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.test.skip>true</maven.test.skip>
         <maven.complier.source>1.8</maven.complier.source>
         <maven.complier.target>1.8</maven.complier.target>
         <spring-boot.version>2.2.7.RELEASE</spring-boot.version>
-        <mybatis.spring.boot.version>1.3.2</mybatis.spring.boot.version>
         <swagger.version>2.9.2</swagger.version>
-        <jackson.version>2.12.1</jackson.version>
-        <lombok.version>1.18.0</lombok.version>
+        <mybatis.spring.boot.version>2.1.4</mybatis.spring.boot.version>
+        <pagehelper.spring.boot.version>1.2.13</pagehelper.spring.boot.version>
+        <jackson.version>2.12.4</jackson.version>
+        <hikaricp.version>3.4.5</hikaricp.version>
+        <mysql.version>8.0.16</mysql.version>
+        <lombok.version>1.18.16</lombok.version>
         <elasticsearch.version>7.6.2</elasticsearch.version>
         <curator.version>4.3.0</curator.version>
         <guava.version>30.1-jre</guava.version>
         <jedis.version>3.2.0</jedis.version>
         <junit.version>4.13.1</junit.version>
         <aspectj.version>1.9.6</aspectj.version>
+        <shedlock.version>4.20.0</shedlock.version>
     </properties>
 
     <dependencyManagement>
@@ -76,16 +81,17 @@
                 <version>${spring-boot.version}</version>
                 <scope>test</scope>
             </dependency>
-            <!-- springboot mybatis -->
+            <!-- spring-boot mybatis https://github.com/mybatis/spring-boot-starter/ -->
             <dependency>
                 <groupId>org.mybatis.spring.boot</groupId>
                 <artifactId>mybatis-spring-boot-starter</artifactId>
                 <version>${mybatis.spring.boot.version}</version>
             </dependency>
+            <!-- spring-boot mybatis pagehelper https://github.com/pagehelper/pagehelper-spring-boot -->
             <dependency>
                 <groupId>com.github.pagehelper</groupId>
                 <artifactId>pagehelper-spring-boot-starter</artifactId>
-                <version>1.2.12</version>
+                <version>${pagehelper.spring.boot.version}</version>
             </dependency>
             <!-- websocket -->
             <dependency>
@@ -104,12 +110,12 @@
             <dependency>
                 <groupId>com.zaxxer</groupId>
                 <artifactId>HikariCP</artifactId>
-                <version>3.2.0</version>
+                <version>${hikaricp.version}</version>
             </dependency>
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
-                <version>8.0.16</version>
+                <version>${mysql.version}</version>
             </dependency>
 
             <!-- swagger -->
@@ -168,12 +174,12 @@
             <dependency>
                 <groupId>net.javacrumbs.shedlock</groupId>
                 <artifactId>shedlock-spring</artifactId>
-                <version>4.20.0</version>
+                <version>${shedlock.version}</version>
             </dependency>
             <dependency>
                 <groupId>net.javacrumbs.shedlock</groupId>
                 <artifactId>shedlock-provider-jdbc-template</artifactId>
-                <version>4.20.0</version>
+                <version>${shedlock.version}</version>
             </dependency>
 
             <!-- elasticsearch -->
