--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <swagger.version>2.9.2</swagger.version>
         <mybatis.spring.boot.version>2.1.4</mybatis.spring.boot.version>
         <pagehelper.spring.boot.version>1.2.13</pagehelper.spring.boot.version>
+        <log4j2.version>2.16.0</log4j2.version>
         <jackson.version>2.12.4</jackson.version>
         <hikaricp.version>3.4.5</hikaricp.version>
         <mysql.version>8.0.16</mysql.version>
@@ -74,6 +75,17 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-log4j2</artifactId>
                 <version>${spring-boot.version}</version>
+            </dependency>
+            <!-- log4j2 -->
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-api</artifactId>
+                <version>${log4j2.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-core</artifactId>
+                <version>${log4j2.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
