--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,8 @@
         <maven.complier.target>1.8</maven.complier.target>
         <spring-boot.version>2.2.7.RELEASE</spring-boot.version>
         <swagger.version>2.9.2</swagger.version>
-        <mybatis.spring.boot.version>2.1.4</mybatis.spring.boot.version>
-        <pagehelper.spring.boot.version>1.2.13</pagehelper.spring.boot.version>
+        <mybatis.spring-boot.version>2.1.4</mybatis.spring-boot.version>
+        <pagehelper.spring-boot.version>1.2.13</pagehelper.spring-boot.version>
         <log4j2.version>2.17.0</log4j2.version>
         <jackson.version>2.12.4</jackson.version>
         <hikaricp.version>3.4.5</hikaricp.version>
@@ -97,13 +97,13 @@
             <dependency>
                 <groupId>org.mybatis.spring.boot</groupId>
                 <artifactId>mybatis-spring-boot-starter</artifactId>
-                <version>${mybatis.spring.boot.version}</version>
+                <version>${mybatis.spring-boot.version}</version>
             </dependency>
             <!-- spring-boot mybatis pagehelper https://github.com/pagehelper/pagehelper-spring-boot -->
             <dependency>
                 <groupId>com.github.pagehelper</groupId>
                 <artifactId>pagehelper-spring-boot-starter</artifactId>
-                <version>${pagehelper.spring.boot.version}</version>
+                <version>${pagehelper.spring-boot.version}</version>
             </dependency>
             <!-- websocket -->
             <dependency>
