--- a/pom.xml
+++ b/pom.xml
@@ -27,12 +27,12 @@
         <maven.complier.source>1.8</maven.complier.source>
         <maven.complier.target>1.8</maven.complier.target>
         <spring-boot.version>2.2.7.RELEASE</spring-boot.version>
-        <swagger.version>2.9.2</swagger.version>
+        <swagger.version>3.0.0</swagger.version>
         <mybatis.spring-boot.version>2.1.4</mybatis.spring-boot.version>
         <pagehelper.spring-boot.version>1.2.13</pagehelper.spring-boot.version>
         <log4j2.version>2.17.1</log4j2.version>
         <hikaricp.version>3.4.5</hikaricp.version>
-        <mysql.version>8.0.16</mysql.version>
+        <mysql.version>8.0.28</mysql.version>
         <lombok.version>1.18.16</lombok.version>
         <elasticsearch.version>7.14.0</elasticsearch.version>
         <curator.version>4.3.0</curator.version>
@@ -132,12 +132,7 @@
             <!-- swagger -->
             <dependency>
                 <groupId>io.springfox</groupId>
-                <artifactId>springfox-swagger2</artifactId>
-                <version>${swagger.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>io.springfox</groupId>
-                <artifactId>springfox-swagger-ui</artifactId>
+                <artifactId>springfox-boot-starter</artifactId>
                 <version>${swagger.version}</version>
             </dependency>
 
