--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.7.RELEASE</version>
+        <version>2.5.12</version>
     </parent>
 
     <groupId>com.luxx</groupId>
@@ -26,10 +26,10 @@
         <maven.test.skip>true</maven.test.skip>
         <maven.complier.source>1.8</maven.complier.source>
         <maven.complier.target>1.8</maven.complier.target>
-        <spring-boot.version>2.2.7.RELEASE</spring-boot.version>
+        <spring-boot.version>2.5.12</spring-boot.version>
         <swagger.version>3.0.0</swagger.version>
-        <mybatis.spring-boot.version>2.1.4</mybatis.spring-boot.version>
-        <pagehelper.spring-boot.version>1.2.13</pagehelper.spring-boot.version>
+        <mybatis.spring-boot.version>2.2.2</mybatis.spring-boot.version>
+        <pagehelper.spring-boot.version>1.4.2</pagehelper.spring-boot.version>
         <log4j2.version>2.17.1</log4j2.version>
         <hikaricp.version>3.4.5</hikaricp.version>
         <mysql.version>8.0.28</mysql.version>
@@ -68,6 +68,11 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-web</artifactId>
+                <version>${spring-boot.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-validation</artifactId>
                 <version>${spring-boot.version}</version>
             </dependency>
             <dependency>
