--- a/seed-web/src/main/resources/application.properties
+++ b/seed-web/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.profiles.active=dev
 server.port=9090
-#server.servlet.context-path=/api
+server.servlet.context-path=/api
 # freemarker
 spring.freemarker.templateLoaderPath=classpath:/templates/
 spring.freemarker.suffix=.ftl
