--- a/seed-web/src/main/resources/application-dev.properties
+++ b/seed-web/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 logging.config=classpath:log4j/log4j2-dev.xml
 # spring datasource
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/data_db?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false&zeroDateTimeBehavior=convertToNull&serverTimezone=GMT%2B8
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/data_db?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=admin
