Add web socket demo

--- a/pom.xml
+++ b/pom.xml
@@ -266,6 +266,13 @@
                 <version>5.2.0</version>
             </dependency>
 
+            <!-- jsch -->
+            <dependency>
+                <groupId>com.jcraft</groupId>
+                <artifactId>jsch</artifactId>
+                <version>0.1.55</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
