--- a/seed-web/src/main/resources/application.properties
+++ b/seed-web/src/main/resources/application.properties
@@ -1,12 +1,15 @@
 spring.profiles.active=dev
 server.port=9090
-server.servlet.context-path=/api
+server.servlet.context-path=/
+spring.mvc.servlet.path=/
+spring.mvc.view.prefix=/page/
+spring.mvc.view.suffix=.html
 # freemarker
-spring.freemarker.templateLoaderPath=classpath:/templates/
-spring.freemarker.suffix=.ftl
-spring.freemarker.charset=UTF-8
-spring.freemarker.request-context-attribute=request
-spring.freemarker.settings.number_format=0.##########
+#spring.freemarker.templateLoaderPath=classpath:/templates/
+#spring.freemarker.suffix=.ftl
+#spring.freemarker.charset=UTF-8
+#spring.freemarker.request-context-attribute=request
+#spring.freemarker.settings.number_format=0.##########
 # mybatis pageHelper
 pagehelper.helper-dialect=mysql
 pagehelper.params=count=countSql
