--- a/seed-task/src/main/resources/application-prod.properties
+++ b/seed-task/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-logging.config=classpath:log4j/log4j2-prd.xml
+logging.config=classpath:log4j/log4j2-prod.xml
 # xxl-job
 spring.schedule.job.admin.addresses=http://168.11.9.133:9090/xxl-job-admin
 spring.schedule.job.executor.appname=app-task
