--- a/seed-task/pom.xml
+++ b/seed-task/pom.xml
@@ -41,6 +41,7 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
+        <!-- xxl-job -->
         <dependency>
             <groupId>com.xuxueli</groupId>
             <artifactId>xxl-job-core</artifactId>
