--- a/seed-web/src/main/resources/application-prod.properties
+++ b/seed-web/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-logging.config=classpath:log4j/log4j2-prd.xml
+logging.config=classpath:log4j/log4j2-prod.xml
 # spring datasource
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/data_db?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&serverTimezone=GMT%2B8
 spring.datasource.username=root
