--- a/pom.xml
+++ b/pom.xml
@@ -43,9 +43,11 @@
         <metrics.version>4.2.6</metrics.version>
         <ipaddress.version>5.3.3</ipaddress.version>
         <caffeine.version>2.9.3</caffeine.version>
+        <xxl-job.version>2.3.1</xxl-job.version>
         <shedlock.version>5.10.2</shedlock.version>
         <sa-token.version>1.37.0</sa-token.version>
         <java-jwt.version>4.4.0</java-jwt.version>
+        <commons-io.version>2.15.1</commons-io.version>
     </properties>
 
     <dependencyManagement>
@@ -170,7 +172,7 @@
             <dependency>
                 <groupId>com.xuxueli</groupId>
                 <artifactId>xxl-job-core</artifactId>
-                <version>2.3.1</version>
+                <version>${xxl-job.version}</version>
             </dependency>
 
             <!-- shedlock分布式锁 -->
@@ -256,18 +258,11 @@
                 <version>${metrics.version}</version>
             </dependency>
 
-            <!-- commons-lang3 -->
-            <dependency>
-                <groupId>org.apache.commons</groupId>
-                <artifactId>commons-lang3</artifactId>
-                <version>3.11</version>
-            </dependency>
-
             <!-- commons-io -->
             <dependency>
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
-                <version>2.8.0</version>
+                <version>${commons-io.version}</version>
             </dependency>
 
             <!-- apache poi pdf -->
@@ -288,11 +283,11 @@
                 <version>23.1</version>
             </dependency>
 
-            <!-- jsch -->
+            <!-- Java implementation of SSH2 -->
             <dependency>
-                <groupId>com.jcraft</groupId>
+                <groupId>com.github.mwiede</groupId>
                 <artifactId>jsch</artifactId>
-                <version>0.1.55</version>
+                <version>0.2.16</version>
             </dependency>
 
         </dependencies>
