--- a/seed-task/src/main/resources/application-prod.properties
+++ b/seed-task/src/main/resources/application-prod.properties
@@ -1,12 +1,12 @@
 logging.config=classpath:log4j/log4j2-prod.xml
 # xxl-job
 spring.schedule.job.admin.addresses=http://168.11.9.133:9090/xxl-job-admin
-spring.schedule.job.executor.appname=app-task
+spring.schedule.job.executor.app-name=app-task
 spring.schedule.job.executor.port=19000
 spring.schedule.job.executor.ip=
 spring.schedule.job.accessToken=
-spring.schedule.job.executor.logpath=/home/appadmin/app-task/log/jobhandler
-spring.schedule.job.executor.logretentiondays=3
+spring.schedule.job.executor.log-path=/home/appadmin/app-task/log/jobhandler
+spring.schedule.job.executor.log-retention-days=3
 # spring datasource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/web?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&zeroDateTimeBehavior=convertToNull&serverTimezone=GMT%2B8
