--- a/pom.xml
+++ b/pom.xml
@@ -277,6 +277,13 @@
                 <version>${commons-io.version}</version>
             </dependency>
 
+            <!-- captcha -->
+            <dependency>
+                <groupId>com.github.penggle</groupId>
+                <artifactId>kaptcha</artifactId>
+                <version>2.3.2</version>
+            </dependency>
+
             <!-- apache poi pdf -->
             <dependency>
                 <groupId>fr.opensagres.xdocreport</groupId>
