Add mail service

--- a/pom.xml
+++ b/pom.xml
@@ -277,6 +277,13 @@
                 <version>${commons-io.version}</version>
             </dependency>
 
+            <!-- javax.mail -->
+            <dependency>
+                <groupId>com.sun.mail</groupId>
+                <artifactId>javax.mail</artifactId>
+                <version>1.6.2</version>
+            </dependency>
+
             <!-- captcha -->
             <dependency>
                 <groupId>com.github.penggle</groupId>
