--- a/seed-web/pom.xml
+++ b/seed-web/pom.xml
@@ -127,6 +127,11 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+        </dependency>
+
         <!-- javax.mail -->
         <dependency>
             <groupId>com.sun.mail</groupId>
