--- a/seed-workflow/src/main/resources/application-dev.properties
+++ b/seed-workflow/src/main/resources/application-dev.properties
@@ -3,7 +3,7 @@ logging.level.root=info
 server.port=19098
 server.servlet.context-path=/flow
 # spring mybatis
-mybatis.type-aliases-package=com.luxx.flow.model
+mybatis.type-aliases-package=com.luxx.workflow.model
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.mapper-locations=classpath:/mapper/*.xml
 # spring datasource
