Update token auth check

--- a/seed-web/src/main/resources/application-dev.properties
+++ b/seed-web/src/main/resources/application-dev.properties
@@ -3,6 +3,7 @@ server.port=19090
 server.servlet.context-path=/
 spring.messages.basename=i18n/messages
 spring.messages.encoding=UTF-8
+spring.mvc.locale=zh_CN
 spring.mvc.servlet.path=/
 spring.mvc.view.prefix=/page/
 spring.mvc.view.suffix=.html
@@ -12,10 +13,6 @@ spring.mvc.view.suffix=.html
 #spring.freemarker.charset=UTF-8
 #spring.freemarker.request-context-attribute=request
 #spring.freemarker.settings.number_format=0.##########
-# token
-sa-token.token-name=sa-token
-# token 有效期（单位：秒） 默认30天，-1 代表永久有效
-sa-token.timeout=3600
 # mybatis pageHelper
 pagehelper.helper-dialect=mysql
 pagehelper.params=count=countSql
